Fix all IDE compiler warnings, modernize Paper/Adventure APIs, complete Uzbek localization